Trying to fix menu icon wrapping

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -424,7 +424,7 @@ img {
   position: absolute;
   top: 0;
   left: 0;
-  overflow: hidden;
+  overflow: visible;
   height: 200px;
   z-index: 99;
 }
@@ -441,7 +441,7 @@ img {
   top: 20px;
   float: left;
   z-index: 10;
-  overflow: hidden;
+  overflow: visible;
   cursor: pointer;
 }
 
@@ -608,7 +608,7 @@ img {
 .main-header .title {
   display: inline-block;
   position: relative;
-  padding-bottom: 14px;
+  padding-bottom: 8px;
   border-bottom: 2.5px solid #fff;
 }
 
@@ -617,7 +617,7 @@ img {
   margin-bottom: 0;
   font-size: 2.3rem;
   line-height: 2.7rem;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-weight: 900;
   transition: color 0.5s ease-in-out;
 }
@@ -625,8 +625,8 @@ img {
 .main-header .title p {
     color: #fff;
     margin: 0;
-    font-size: 1.1rem;
-    text-transform: uppercase;
+    font-size: 1rem;
+    /* text-transform: uppercase; */
 }
 
 /* ==========================================================================
